--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,40 @@ tasks.withType(JavaCompile) {
 dependencies {
     compileOnly('javax.servlet:javax.servlet-api:4.0.1')
 
+    // Spring dependencies
+    implementation("org.springframework:spring-web:5.3.32")
+    implementation("org.springframework:spring-webmvc:5.3.32")
+    implementation("org.springframework:spring-core:5.3.32")
+    // Lombok
+    compileOnly("org.projectlombok:lombok:1.18.30")
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    // jstl
+    implementation('jstl:jstl:1.2')
+    // DB SQL
+    implementation("mysql:mysql-connector-java:8.0.33")
+    // File Upload
+    implementation 'commons-fileupload:commons-fileupload:1.4'
+    implementation 'commons-io:commons-io:2.11.0'
+    // Validation
+    implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+    implementation group: 'org.hibernate', name: 'hibernate-validator', version: '6.1.0.Final'
+    // cloudinary
+    implementation("com.cloudinary:cloudinary-core:1.38.0")
+    implementation 'com.cloudinary:cloudinary-http44:1.32.2'
+    // thymeleaf dependencies
+    implementation('org.thymeleaf:thymeleaf:3.0.12.RELEASE')
+    implementation('org.thymeleaf:thymeleaf-spring5:3.0.12.RELEASE')
+    // hibernate
+    implementation 'org.hibernate:hibernate-core:5.6.15.Final'
+    implementation 'javax.transaction:javax.transaction-api:1.3'
+    implementation 'org.springframework:spring-orm:5.3.32'
+    implementation 'javax.persistence:javax.persistence-api:2.2'
+    // logging
+    implementation 'org.slf4j:slf4j-api:1.7.36'
+    implementation 'org.slf4j:slf4j-simple:1.7.36'
+    // mapped DTO
+    implementation "org.modelmapper:modelmapper:2.4.2"
+
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 }
